NF11/TP/nf11-td-prodcode/target/generated-sources/antlr4/prelogoparsing/PreLogoParser.java
// Generated from PreLogo.g4 by ANTLR 4.4

  package prelogoparsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PreLogoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, INT=5, ID=6, WS=7, COULEUR=8;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'nb = '", "'import'", "INT", "ID", "WS", "COULEUR"
	};
	public static final int
		RULE_prestat = 0, RULE_impt = 1, RULE_commande = 2;
	public static final String[] ruleNames = {
		"prestat", "impt", "commande"
	};

	@Override
	public String getGrammarFileName() { return "PreLogo.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PreLogoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrestatContext extends ParserRuleContext {
		public List<ImptContext> impt() {
			return getRuleContexts(ImptContext.class);
		}
		public CommandeContext commande(int i) {
			return getRuleContext(CommandeContext.class,i);
		}
		public ImptContext impt(int i) {
			return getRuleContext(ImptContext.class,i);
		}
		public List<CommandeContext> commande() {
			return getRuleContexts(CommandeContext.class);
		}
		public PrestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prestat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).enterPrestat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).exitPrestat(this);
		}
	}

	public final PrestatContext prestat() throws RecognitionException {
		PrestatContext _localctx = new PrestatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prestat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(6); impt();
				}
				}
				setState(9); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(12); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(11); commande();
				}
				}
				setState(14); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImptContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PreLogoParser.ID, 0); }
		public ImptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).enterImpt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).exitImpt(this);
		}
	}

	public final ImptContext impt() throws RecognitionException {
		ImptContext _localctx = new ImptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_impt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16); match(T__0);
			setState(17); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandeContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(PreLogoParser.INT, i);
		}
		public TerminalNode COULEUR() { return getToken(PreLogoParser.COULEUR, 0); }
		public TerminalNode ID() { return getToken(PreLogoParser.ID, 0); }
		public List<TerminalNode> INT() { return getTokens(PreLogoParser.INT); }
		public CommandeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commande; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).enterCommande(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreLogoListener ) ((PreLogoListener)listener).exitCommande(this);
		}
	}

	public final CommandeContext commande() throws RecognitionException {
		CommandeContext _localctx = new CommandeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_commande);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19); match(ID);
			setState(20); match(T__3);
			setState(21); match(INT);
			setState(22); match(INT);
			setState(24);
			_la = _input.LA(1);
			if (_la==COULEUR) {
				{
				setState(23); match(COULEUR);
				}
			}

			setState(26); match(T__2);
			setState(29);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(27); match(T__1);
				setState(28); match(INT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}